[package]
name = "cargo-bsn-fmt"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cargo-bsn-fmt"
path = "src/main.rs"

[dependencies]
syn = { version = "2", features = ["full", "parsing", "extra-traits"] }
proc-macro2 = "1"
quote = "1"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
